--- a/package.json
+++ b/package.json
@@ -9,10 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@urbit/foundation-design-system": "^0.5.3",
+    "@urbit/markdoc": "^0.1.6",
+    "classnames": "^2.3.2",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
-    "next": "13.0.1",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "^12.1.5",
+    "prismjs": "^1.29.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "tailwindcss": "^3.2.1"
   }
 }
