--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "next": "^12.1.5",
     "prismjs": "^1.29.0",
     "react": "^17.0.0",
-    "react-dom": "^17.0.0"
+    "react-dom": "^17.0.0",
+    "react-hotkeys": "^2.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
