--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@socialgouv/matomo-next": "^1.4.0",
     "@urbit/foundation-design-system": "^0.5.3",
     "@urbit/markdoc": "^0.1.6",
     "classnames": "^2.3.2",
@@ -18,7 +19,8 @@
     "prismjs": "^1.29.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "react-hotkeys": "^2.0.0"
+    "react-hotkeys": "^2.0.0",
+    "tailwindcss-theme-swapper": "^0.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
