--- a/package.json
+++ b/package.json
@@ -3,24 +3,31 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm run prebuild && next dev",
     "build": "next build",
+    "prebuild": "npm run cache-posts",
+    "cache-posts": "node lib/cache.js",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@socialgouv/matomo-next": "^1.4.0",
+    "@tlon/sigil-js": "^1.4.5",
     "@urbit/foundation-design-system": "^0.5.3",
     "@urbit/markdoc": "^0.1.6",
     "classnames": "^2.3.2",
+    "downshift": "^7.0.1",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
+    "leven-sort": "^3.0.0",
+    "lodash.debounce": "^4.0.8",
     "next": "^12.1.5",
     "prismjs": "^1.29.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-hotkeys": "^2.0.0",
-    "tailwindcss-theme-swapper": "^0.6.2"
+    "tailwindcss-theme-swapper": "^0.6.2",
+    "urbit-ob": "^5.0.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
