--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-hotkeys": "^2.0.0",
+    "react-swipeable": "^7.0.0",
     "tailwindcss-theme-swapper": "^0.6.2",
     "urbit-ob": "^5.0.1"
   },
