--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@urbit/foundation-design-system": "^0.5.3",
     "@urbit/markdoc": "^0.1.6",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.6",
     "downshift": "^7.0.1",
     "eslint": "8.26.0",
     "eslint-config-next": "13.0.1",
